Bug 100910 - Bad rendering in property tab
Summary: Bad rendering in property tab
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
4.4.7.2 release
Hardware: All All
: low minor
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.0 target:5.2.1 target:5.1.6
Keywords: regression
Depends on:
Blocks:
 
Reported: 2016-07-14 16:02 UTC by lorenzo.morin
Modified: 2016-10-25 18:40 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description lorenzo.morin 2016-07-14 16:02:12 UTC
Description:
Go on file>property in the custom properties tab press add, then choose the type 
you want except "yes or no". Choose "text" or "number" and write something in the value box, then change the type in "yes or no".

Affected version:

Versione: 5.2.0.0.beta2
Build ID: ae12e6f168ba39f137fc110174a37c482ce68fa4
Thread CPU: 2; Versione SO: Linux 4.1; Resa interfaccia: predefinito; 
Versione locale: it-IT (it_IT.UTF-8)


Versione: 5.0.6.3
Build ID: 490fc03b25318460cfc54456516ea2519c11d1aa
Versione locale: it-IT (it_IT.UTF-8) 



 

zypper search -i -s gtk*

S | Nome                        | Tipo    | Versione    | Arch.  | Archivio                 
--+-----------------------------+---------+-------------+--------+--------------------------
i | gtk2-branding-openSUSE      | package | 42.1-9.3    | noarch | Main Update Repository   
i | gtk2-branding-openSUSE      | package | 42.1-9.3    | noarch | openSUSE-Leap-42.1-Update
i | gtk2-data                   | package | 2.24.30-8.3 | noarch | Main Update Repository   
i | gtk2-data                   | package | 2.24.30-8.3 | noarch | openSUSE-Leap-42.1-Update
i | gtk2-immodule-amharic       | package | 2.24.30-8.3 | x86_64 | Main Update Repository   
i | gtk2-immodule-amharic       | package | 2.24.30-8.3 | x86_64 | openSUSE-Leap-42.1-Update
i | gtk2-immodule-inuktitut     | package | 2.24.30-8.3 | x86_64 | Main Update Repository   
i | gtk2-immodule-inuktitut     | package | 2.24.30-8.3 | x86_64 | openSUSE-Leap-42.1-Update
i | gtk2-immodule-thai          | package | 2.24.30-8.3 | x86_64 | Main Update Repository   
i | gtk2-immodule-thai          | package | 2.24.30-8.3 | x86_64 | openSUSE-Leap-42.1-Update
i | gtk2-immodule-vietnamese    | package | 2.24.30-8.3 | x86_64 | Main Update Repository   
i | gtk2-immodule-vietnamese    | package | 2.24.30-8.3 | x86_64 | openSUSE-Leap-42.1-Update
i | gtk2-lang                   | package | 2.24.30-8.3 | noarch | Main Update Repository   
i | gtk2-lang                   | package | 2.24.30-8.3 | noarch | openSUSE-Leap-42.1-Update
i | gtk2-metatheme-adwaita      | package | 3.16.2-2.2  | noarch | Main Repository (OSS)    
i | gtk2-theming-engine-adwaita | package | 3.16.2-2.2  | x86_64 | Main Repository (OSS)    
i | gtk2-tools                  | package | 2.24.30-8.3 | x86_64 | Main Update Repository   
i | gtk2-tools                  | package | 2.24.30-8.3 | x86_64 | openSUSE-Leap-42.1-Update
i | gtk2-tools-32bit            | package | 2.24.30-8.3 | x86_64 | Main Update Repository   
i | gtk2-tools-32bit            | package | 2.24.30-8.3 | x86_64 | openSUSE-Leap-42.1-Update
i | gtk3-branding-openSUSE      | package | 42.1-1.1    | noarch | Main Repository (OSS)    
i | gtk3-data                   | package | 3.16.7-5.1  | noarch | Main Update Repository   
i | gtk3-data                   | package | 3.16.7-5.1  | noarch | openSUSE-Leap-42.1-Update
i | gtk3-immodule-amharic       | package | 3.16.7-5.1  | x86_64 | Main Update Repository   
i | gtk3-immodule-amharic       | package | 3.16.7-5.1  | x86_64 | openSUSE-Leap-42.1-Update
i | gtk3-immodule-inuktitut     | package | 3.16.7-5.1  | x86_64 | Main Update Repository   
i | gtk3-immodule-inuktitut     | package | 3.16.7-5.1  | x86_64 | openSUSE-Leap-42.1-Update
i | gtk3-immodule-thai          | package | 3.16.7-5.1  | x86_64 | Main Update Repository   
i | gtk3-immodule-thai          | package | 3.16.7-5.1  | x86_64 | openSUSE-Leap-42.1-Update
i | gtk3-immodule-vietnamese    | package | 3.16.7-5.1  | x86_64 | Main Update Repository   
i | gtk3-immodule-vietnamese    | package | 3.16.7-5.1  | x86_64 | openSUSE-Leap-42.1-Update
i | gtk3-lang                   | package | 3.16.7-5.1  | noarch | Main Update Repository   
i | gtk3-lang                   | package | 3.16.7-5.1  | noarch | openSUSE-Leap-42.1-Update
i | gtk3-metatheme-adwaita      | package | 3.16.2-2.2  | noarch | Main Repository (OSS)    
i | gtk3-tools                  | package | 3.16.7-5.1  | x86_64 | Main Update Repository   
i | gtk3-tools                  | package | 3.16.7-5.1  | x86_64 | openSUSE-Leap-42.1-Update





zypper search -i -s plasma*


S | Nome                                | Tipo    | Versione     | Arch.  | Archivio                 
--+-------------------------------------+---------+--------------+--------+--------------------------
i | plasma-framework                    | package | 5.21.0-15.1  | x86_64 | Main Update Repository   
i | plasma-framework                    | package | 5.21.0-15.1  | x86_64 | openSUSE-Leap-42.1-Update
i | plasma-framework-components         | package | 5.21.0-15.1  | x86_64 | Main Update Repository   
i | plasma-framework-components         | package | 5.21.0-15.1  | x86_64 | openSUSE-Leap-42.1-Update
i | plasma-framework-lang               | package | 5.21.0-15.1  | noarch | Main Update Repository   
i | plasma-framework-lang               | package | 5.21.0-15.1  | noarch | openSUSE-Leap-42.1-Update
i | plasma-framework-private            | package | 5.21.0-15.1  | x86_64 | Main Update Repository   
i | plasma-framework-private            | package | 5.21.0-15.1  | x86_64 | openSUSE-Leap-42.1-Update
i | plasma-nm5                          | package | 5.5.5-9.1    | x86_64 | Main Update Repository   
i | plasma-nm5                          | package | 5.5.5-9.1    | x86_64 | openSUSE-Leap-42.1-Update
i | plasma-nm5-lang                     | package | 5.5.5-9.1    | noarch | Main Update Repository   
i | plasma-nm5-lang                     | package | 5.5.5-9.1    | noarch | openSUSE-Leap-42.1-Update
i | plasma-nm5-openvpn                  | package | 5.5.5-9.1    | x86_64 | Main Update Repository   
i | plasma-nm5-openvpn                  | package | 5.5.5-9.1    | x86_64 | openSUSE-Leap-42.1-Update
i | plasma-nm5-pptp                     | package | 5.5.5-9.1    | x86_64 | Main Update Repository   
i | plasma-nm5-pptp                     | package | 5.5.5-9.1    | x86_64 | openSUSE-Leap-42.1-Update
i | plasma-nm5-vpnc                     | package | 5.5.5-9.1    | x86_64 | Main Update Repository   
i | plasma-nm5-vpnc                     | package | 5.5.5-9.1    | x86_64 | openSUSE-Leap-42.1-Update
i | plasma5-addons                      | package | 5.5.5-9.1    | x86_64 | Main Update Repository   
i | plasma5-addons                      | package | 5.5.5-9.1    | x86_64 | openSUSE-Leap-42.1-Update
i | plasma5-addons-kimpanel             | package | 5.5.5-9.1    | x86_64 | Main Update Repository   
i | plasma5-addons-kimpanel             | package | 5.5.5-9.1    | x86_64 | openSUSE-Leap-42.1-Update
i | plasma5-addons-lang                 | package | 5.5.5-9.1    | noarch | Main Update Repository   
i | plasma5-addons-lang                 | package | 5.5.5-9.1    | noarch | openSUSE-Leap-42.1-Update
i | plasma5-desktop                     | package | 5.5.5-20.1   | x86_64 | Main Update Repository   
i | plasma5-desktop                     | package | 5.5.5-20.1   | x86_64 | openSUSE-Leap-42.1-Update
i | plasma5-desktop-branding-openSUSE   | package | 13.3-35.1    | x86_64 | Main Update Repository   
i | plasma5-desktop-branding-openSUSE   | package | 13.3-35.1    | x86_64 | openSUSE-Leap-42.1-Update
i | plasma5-desktop-lang                | package | 5.5.5-20.1   | noarch | Main Update Repository   
i | plasma5-desktop-lang                | package | 5.5.5-20.1   | noarch | openSUSE-Leap-42.1-Update
i | plasma5-pa                          | package | 5.5.5-9.1    | x86_64 | Main Update Repository   
i | plasma5-pa                          | package | 5.5.5-9.1    | x86_64 | openSUSE-Leap-42.1-Update
i | plasma5-pa-lang                     | package | 5.5.5-9.1    | noarch | Main Update Repository   
i | plasma5-pa-lang                     | package | 5.5.5-9.1    | noarch | openSUSE-Leap-42.1-Update
i | plasma5-pk-updates                  | package | 0.2-5.1      | x86_64 | Main Update Repository   
i | plasma5-pk-updates                  | package | 0.2-5.1      | x86_64 | openSUSE-Leap-42.1-Update
i | plasma5-pk-updates-lang             | package | 0.2-5.1      | noarch | Main Update Repository   
i | plasma5-pk-updates-lang             | package | 0.2-5.1      | noarch | openSUSE-Leap-42.1-Update
i | plasma5-session                     | package | 5.5.5-9.1    | noarch | Main Update Repository   
i | plasma5-session                     | package | 5.5.5-9.1    | noarch | openSUSE-Leap-42.1-Update
i | plasma5-workspace                   | package | 5.5.5.2-12.1 | x86_64 | Main Update Repository   
i | plasma5-workspace                   | package | 5.5.5.2-12.1 | x86_64 | openSUSE-Leap-42.1-Update
i | plasma5-workspace-branding-openSUSE | package | 13.3-35.1    | x86_64 | Main Update Repository   
i | plasma5-workspace-branding-openSUSE | package | 13.3-35.1    | x86_64 | openSUSE-Leap-42.1-Update
i | plasma5-workspace-lang              | package | 5.5.5.2-12.1 | noarch | Main Update Repository   
i | plasma5-workspace-lang              | package | 5.5.5.2-12.1 | noarch | openSUSE-Leap-42.1-Update
i | plasma5-workspace-libs              | package | 5.5.5.2-12.1 | x86_64 | Main Update Repository   
i | plasma5-workspace-libs              | package | 5.5.5.2-12.1 | x86_64 | openSUSE-Leap-42.1-Update
Comment 1 MM 2016-07-14 19:33:24 UTC
Unconfirmed with v4.3.7.2 under mint 17.3 x64.
Confirmed with v4.4.7.2 under mint 17.3 x64.
Confirmed with v5.2.0.2 under ubuntu 16.04 x64.

Looks like the textbox isn't removed properly before adding the 'yes/no' buttons.
Comment 2 Commit Notification 2016-07-16 21:00:43 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=997c7accd393bc665538403a5738ce1a626d9665

Resolves: tdf#100910 yes/no doesn't clear bg

It will be available in 5.3.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 3 Commit Notification 2016-07-17 18:18:47 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-2":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=4dc52f44d5098c3f367fe5414e3dfbbdaef81600&h=libreoffice-5-2

Resolves: tdf#100910 yes/no doesn't clear bg

It will be available in 5.2.1.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 4 Commit Notification 2016-07-17 18:18:54 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=bd6d7374df93cc173967a95f1deae2d667c6d963&h=libreoffice-5-1

Resolves: tdf#100910 yes/no doesn't clear bg

It will be available in 5.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.