Resolves: tdf#100910 yes/no doesn't clear bg

Change-Id: If6a31cefe7137d338a57b5a28dfda63809957190
(cherry picked from commit 997c7accd393bc665538403a5738ce1a626d9665)
Reviewed-on: https://gerrit.libreoffice.org/27259
Tested-by: Jenkins <ci@libreoffice.org>
Reviewed-by: Markus Mohrhard <markus.mohrhard@googlemail.com>